# opencv_project_template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
apps/console_app/: CMakeLists.txt  README.md
apps/console_app/docs/: installation.md
apps/console_app/src/: main.cpp
apps/test_app/: CMakeLists (copy).txt  CMakeLists.txt
cmake/: FindTF.cmake
docs/: installation.md
modules/roi_grabber/: CMakeLists.txt  README.md
modules/roi_grabber/docs/: algorithm.md
modules/roi_grabber/examples/: main.cpp
modules/roi_grabber/include/roi_grabber/: roi_grabber.h
modules/roi_grabber/src/: roi_grabber.cpp
modules/roi_grabber/tests/: main.cpp
scripts/: README.md  voc2yolo.py
